# tonfa

./: .gitignore  Dockerfile  README.md  build.sh  build_and_compile.sh  buildozer.spec  main.py  pyproject.toml  pyrightconfig.json  ruff.toml  tolla.kv  tolla_app.py  tonfa.kv  tonfa_app.py
hole/csv/: A.csv  B.csv  C.csv  D.csv  E.csv  F.csv  G.csv  H.csv  J.csv  JS.csv  K.csv  M.csv  N.csv  P.csv  R.csv  S.csv  T.csv  U.csv  V.csv  X.csv  Y.csv  Z.csv
hole/db/: limit_deviations.db
locale/: tonfa.pot
locale/en/LC_MESSAGES/: tonfa.mo  tonfa.po  tonfa.po~
locale/ru/LC_MESSAGES/: tonfa.mo  tonfa.po  tonfa.po~
metadata/ru/: full_description.txt  short_description.txt  title.txt
shaft/csv/: a.csv  b.csv  c.csv  d.csv  e.csv  f.csv  g.csv  h.csv  j.csv  js.csv  k.csv  m.csv  n.csv  p.csv  r.csv  s.csv  t.csv  u.csv  v.csv  x.csv  y.csv  z.csv
shaft/db/: limit_deviations.db
