[project]
name = "tolla"
version = "0.0.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kivymd",
]

[tool.uv.sources]
kivymd = { url = "https://github.com/kivymd/KivyMD/archive/master.zip" }
buildozer = { git = "https://github.com/kivy/buildozer" }

[dependency-groups]
dev = [
    "buildozer",
    "cython==0.29.33",
    "pip>=25.3",
    "ruff>=0.14.2",
    "setuptools>=80.9.0",
    "virtualenv>=20.35.4",
]
